--- a/.github/workflows/export-nginx.yml
+++ b/.github/workflows/export-nginx.yml
@@ -8,19 +8,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Docker
-        uses: docker/setup-docker@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Pull Docker image
-        run: |
-          docker pull nginx:latest
+        run: docker pull nginx:latest
 
       - name: Save image to tar
-        run: |
-          docker save nginx:latest -o ./nginx.tar
+        run: docker save nginx:latest -o nginx.tar
 
       - name: Upload tar as artifact
         uses: actions/upload-artifact@v3
         with:
           name: nginx-image
-          path: ./nginx.tar
+          path: nginx.tar
