--- a/.github/workflows/export-nginx.yml
+++ b/.github/workflows/export-nginx.yml
@@ -12,13 +12,13 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Pull Docker image
-        run: docker pull nginx:latest
+        run: docker pull alpine:latest
 
       - name: Save image to tar
-        run: docker save nginx:latest -o nginx.tar
+        run: docker save alpine:latest -o alpine.tar
 
-      - name: Upload tar as artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: nginx-image
-          path: nginx.tar
+          name: alpine-image
+          path: alpine.tar
