--- a/.github/workflows/export-nginx.yml
+++ b/.github/workflows/export-nginx.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1  # 改成 v1
+        uses: docker/setup-buildx-action@0a724b5e6fa6f40bc5a08b66b655f4a9f01c7a48
 
       - name: Pull Docker image
         run: docker pull alpine:latest
@@ -17,8 +17,8 @@ jobs:
       - name: Save image to tar
         run: docker save alpine:latest -o alpine.tar
 
-      - name: Upload tar as artifact
-        uses: actions/upload-artifact@v2  # 改成 v2
+      - name: Upload artifact
+        uses: actions/upload-artifact@1799279b66bafba4d60af26ef6dd1fc64aa5f32c
         with:
           name: alpine-image
           path: alpine.tar
